--- a/app.json
+++ b/app.json
@@ -1,28 +1,16 @@
 {
   "expo": {
-    "name": "mystory-frontendApp",
-    "slug": "mystory-frontendApp",
+    "name": "MyStory",
+    "slug": "mystory",
     "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
+    "scheme": "mystory",
     "newArchEnabled": true,
-    "splash": {
-      "image": "./assets/splash-icon.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.joanakibode.mystory"
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
+      "package": "com.joanakibode.mystory"
     }
   }
 }
