--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-navigation/native": "^7.0.8",
+    "@react-navigation/native-stack": "^7.1.9",
     "expo": "~52.0.11",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-dom": "18.3.1",
+    "react-native": "0.76.3",
+    "react-native-web": "~0.19.13",
+    "expo-linking": "~7.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
