--- a/app.json
+++ b/app.json
@@ -7,7 +7,10 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.joanakibode.mystory"
+      "bundleIdentifier": "com.joanakibode.mystory",
+      "config": {
+        "usesNonExemptEncryption": false
+      }
     },
     "android": {
       "package": "com.joanakibode.mystory"
