--- a/app.json
+++ b/app.json
@@ -14,6 +14,9 @@
     },
     "android": {
       "package": "com.joanakibode.mystory"
+    },
+    "web": {
+      "bundler": "metro"
     }
   }
 }
