--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
-    "react-native-web": "~0.19.13"
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-svg": "^15.10.1",
+    "react-native-web": "~0.19.13",
+    "expo-web-browser": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
