--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-BACKEND_URL=http://192.168.1.33:8000
 EXPO_SCHEME=mystory 
+API_URL=https://node-mystory.onrender.com
+#API_URL=http://192.168.1.33:8000
