--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
     "expo": "~52.0.11",
     "expo-linking": "~7.0.3",
     "expo-status-bar": "~2.0.0",
+    "expo-web-browser": "~14.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-svg": "^15.10.1",
-    "react-native-web": "~0.19.13",
-    "expo-web-browser": "~14.0.1"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-dotenv": "^3.4.11"
   },
   "private": true
 }
