--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 EXPO_SCHEME=mystory 
-API_URL=https://node-mystory.onrender.com
-#API_URL=http://192.168.1.33:8000
+#API_URL=https://node-mystory.onrender.com
+API_URL=http://192.168.1.33:8000
