--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@react-navigation/native": "^7.0.8",
     "@react-navigation/native-stack": "^7.1.9",
     "expo": "~52.0.11",
+    "expo-device": "~7.0.2",
     "expo-linking": "~7.0.3",
+    "expo-notifications": "~0.29.12",
     "expo-status-bar": "~2.0.0",
     "expo-web-browser": "~14.0.1",
+    "firebase": "^11.2.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
