--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/runtime": "^7.26.7",
     "@expo/metro-runtime": "~4.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/slider": "^4.5.5",
-    "@react-navigation/bottom-tabs": "^7.1.3",
-    "@react-navigation/native": "^7.0.8",
-    "@react-navigation/native-stack": "^7.1.9",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.11.0",
     "expo": "~52.0.11",
+    "expo-dev-client": "~5.0.11",
     "expo-device": "~7.0.2",
     "expo-linking": "~7.0.3",
     "expo-notifications": "~0.29.12",
@@ -26,11 +28,13 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-safe-area-context": "^5.1.0",
+    "react-native-screens": "^4.6.0",
     "react-native-svg": "^15.10.1",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "^0.19.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.26.7",
     "react-native-dotenv": "^3.4.11"
   },
   "private": true
