--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -34,6 +34,8 @@ workflows:
           echo "Environment debugging:"
           echo "Shell: $SHELL"
           echo "PWD: $PWD"
+          echo "All environment variables (names only):"
+          env | cut -d= -f1
           
           # Verify EXPO_TOKEN without exposing it
           if [ -z "$EXPO_TOKEN" ]; then
@@ -42,19 +44,22 @@ workflows:
           else
             TOKEN_LENGTH=${#EXPO_TOKEN}
             echo "EXPO_TOKEN length: $TOKEN_LENGTH"
+            echo "First character: ${EXPO_TOKEN:0:1}"
+            echo "Last character: ${EXPO_TOKEN: -1}"
+            echo "Contains underscore: $(echo $EXPO_TOKEN | grep -c "_")"
+            echo "Number of characters before first underscore: $(echo $EXPO_TOKEN | cut -d'_' -f1 | wc -c)"
+            echo "Number of parts split by underscore: $(echo $EXPO_TOKEN | tr -cd '_' | wc -c)"
             
-            # Print token format for debugging (safely)
-            echo "Token format check:"
-            if [[ $EXPO_TOKEN == *"_"* ]]; then
-              echo "Token contains expected underscore character"
-            else
-              echo "Warning: Token format might be incorrect"
+            if [ $TOKEN_LENGTH -ne 40 ]; then
+              echo "WARNING: Token length ($TOKEN_LENGTH) is not the expected 40 characters"
+              echo "This suggests the token might not be set correctly in Codemagic"
             fi
           fi
           
-          # Create temporary EAS config
-          echo "Creating temporary EAS config..."
-          echo "{\"cli\": {\"version\": \">= 5.9.1\",\"appVersionSource\": \"local\"},\"build\": {\"development\": {\"developmentClient\": true,\"distribution\": \"internal\"}}}" > eas.json
+          # Try reading token from environment file
+          echo "EXPO_TOKEN=$EXPO_TOKEN" > .env.tmp
+          echo "Token from file length: $(cat .env.tmp | cut -d= -f2 | wc -c)"
+          rm .env.tmp
           
           # Attempt to login with token
           echo "Logging in to EAS..."
