changes in codemagic.yaml because of apple id V4

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -49,8 +49,7 @@ workflows:
       - name: Build iOS app
         script: |
           echo "Starting iOS build..."
-          eas build --platform ios --profile development --non-interactive --json \
-            --team-id "$EXPO_APPLE_TEAM_ID"
+          eas build --platform ios --profile development --non-interactive --json
           
     artifacts:
       - "*.ipa"
