changes in codemagic.yaml, maube I didn't need apple id, changed version

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -9,7 +9,7 @@ workflows:
       vars:
         BUNDLE_ID: "com.joanakibode.mystory"
       node: latest
-      xcode: 14.2
+      xcode: latest
       cocoapods: default
     triggering:
       events:
