--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -12,7 +12,7 @@ workflows:
       vars:
         XCODE_WORKSPACE: "StoryCal.xcworkspace" # Your Xcode workspace name
         XCODE_SCHEME: "StoryCal" # Your Xcode scheme name
-        APP_ID: 6451234567 # Replace with your actual App ID from App Store Connect
+        APP_ID: 6742653857 # Replace with your actual App ID from App Store Connect
       node: v19.7.0
       xcode: latest
       cocoapods: default
@@ -26,9 +26,18 @@ workflows:
       - name: Install CocoaPods dependencies
         script: |
           cd ios && pod install
+      - name: Set up keychain to be used for codesigning
+        script: |
+          keychain initialize
+      - name: Fetch signing files
+        script: |
+          app-store-connect fetch-signing-files "com.joanakibode.storycal" --type IOS_APP_STORE --create
+      - name: Add certificates to keychain
+        script: |
+          keychain add-certificates
       - name: Set up code signing settings on Xcode project
         script: |
-          xcode-project use-profiles --warn-only
+          xcode-project use-profiles
       - name: Increment build number
         script: |
           cd $CM_BUILD_DIR/ios
