--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,7 +4,7 @@ workflows:
     max_build_duration: 120
     instance_type: mac_mini_m2
     integrations:
-      app_store_connect: MagicCode  # Uses automatic signing
+      app_store_connect: Codemagic_API_Key  # Uses automatic signing
 
     environment:
       ios_signing:
