--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -65,6 +65,11 @@ workflows:
       - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
       - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
     publishing:
+      app_store_connect:
+        auth: integration
+        submit_to_testflight: true
+        beta_groups:
+          - Internal Testers  # Or specify your group name
       email:
         recipients:
           - jakibode@outlook.fr
