--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -35,14 +35,32 @@ workflows:
       - name: Install CocoaPods dependencies
         script: |
           cd ios && pod install --verbose --repo-update
-      - name: Increment build number
+      - name: Set up code signing settings on Xcode project  # 🔄 MOVE THIS UP
+        script: |
+          xcode-project use-profiles --warn-only
+      - name: Increment build number  # 🔄 NOW RUNS AFTER CODE SIGNING
         script: |
           cd $CM_BUILD_DIR/ios
           LATEST_BUILD_NUMBER=$(app-store-connect get-latest-app-store-build-number "$APP_ID")
           agvtool new-version -all $(($LATEST_BUILD_NUMBER + 1))
-      - name: Set up code signing settings on Xcode project
+      - name: Create exportOptions.plist
         script: |
-          xcode-project use-profiles --warn-only
+          cat > ios/exportOptions.plist <<EOF
+          <?xml version="1.0" encoding="UTF-8"?>
+          <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+          <plist version="1.0">
+          <dict>
+              <key>method</key>
+              <string>app-store</string>
+              <key>teamID</key>
+              <string>286X5G8B98</string>
+              <key>uploadBitcode</key>
+              <false/>
+              <key>uploadSymbols</key>
+              <true/>
+          </dict>
+          </plist>
+          EOF
       - name: Build ipa for distribution
         script: |
           xcode-project use-profiles
@@ -55,7 +73,7 @@ workflows:
           xcodebuild -exportArchive \
             -archivePath $HOME/build/StoryCal.xcarchive \
             -exportOptionsPlist "ios/exportOptions.plist" \
-            -exportPath $HOME/build/ios \
+            -exportPath $CM_BUILD_DIR/build/ios/ipa \
             CODE_SIGN_STYLE=Automatic \
             DEVELOPMENT_TEAM=286X5G8B98 | xcpretty
 
